# SORM

./: .gitignore  README.md  database.py  db.py  dev.sqlite  intergrateWithServerTests.py  models.py  pyproject.toml  test.db  test.py  testing.sqlite  testsNew.py  utils.py
oldCode/: database2.py  main.py  model.py  oldcode.py  test.py  utils.py
sorm/: errors.py  modelManagement.py  orm.py
sorm/dataBaseManagement/: dataBaseMgr.py  utils.py
sorm/dataBaseManagement/dataBaseConnections/: sqliteConn.py  templateConnection.py
sorm/databaseManagement/: dataBaseMgr.py  utils.py
sorm/databaseManagement/databaseConnections/: sqliteConn.py  templateConnection.py
sorm/fields/: fields.py
tests/: confIntergrationTests.py  conftest.py  testModels.py
tests/functional/: test_sormIntergration.py
tests/unit/: test_databaseManagement_utils.py  test_sql_connections.py
